add _media.scss (max-width: 991px-767px)

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/benefits';
+@import 'media/media';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
