--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -13,10 +13,11 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        margin-top: 65px;
+        justify-content: space-around;
+        margin-top: 60px;
     }
     &__block {
-        width: 33%;
+        max-width: 277px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -28,7 +29,7 @@
         }
     }
     &__subheader {
-        margin-top: 20px;
+        margin-top: 30px;
         color: #0D0D0D;
         text-align: center;
         font-size: 18px;
