add consultation(without form) to index.html, add titles.scss, _consultation.scss(without form)

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,8 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/benefits';
+@import 'blocks/titles';
+@import 'blocks/consultation';
 @import 'media/media';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
