--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -22,4 +22,9 @@
         font-size: 16px;
         font-weight: 500;
     }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-size: 16px;
+    }
 }
