--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@
 @import 'blocks/benefits';
 @import 'blocks/titles';
 @import 'blocks/consultation';
+@import 'blocks/forms';
 @import 'media/media';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
