add .carousel(html + styles), script.js(for carousel), slick.min.js, slick.css

--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -114,7 +114,7 @@
         }
     }
     .consultation {
-        padding: 80px 10px 0 10px;
+        padding: 80px 0 0 15px;
         .title_left {
             line-height: 35px;
             font-size: 20px;
