--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,7 +5,7 @@
         width: 750px;
         margin: 0 auto;
     }  
-    .slick-prev, .slick-next {
+    .prev, .next {
         border: none;
         background: none;
         position: absolute;
@@ -17,8 +17,14 @@
             height: 50px;
         }
     }
-    .slick-next {
+    .next {
         left: auto;
         right: -66px;
+    }
+    .tns-item {
+        img {
+            display: block;
+            margin: 0 auto;
+        }
     }
 }
