--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -1,3 +1,19 @@
+@media(max-width: 1200px) {
+    .carousel {
+        .tns-item {
+            img {
+                width: 65%;
+            }
+        }
+        .prev {
+            left: 20px;
+        }
+        .next {
+            right: 20px;
+        }
+    }
+}
+
 @media(max-width: 991px) {
     .promo {
         padding: 21px 15px 93px 15px;
@@ -12,6 +28,16 @@
         .title_left {
             font-size: 30px;
             line-height: 45px;
+        }
+    }
+    .carousel {
+        .tns-item {
+            img {
+                width: 65%;
+            }
+        }
+        .prev, .next {
+            display: none;
         }
     }
 }
@@ -130,6 +156,22 @@
                 width: 100%;
                 height: 58px;
                 font-size: 16px;
+            }
+        }
+    }
+    .carousel {
+        padding: 50px 0;
+        .tns-item {
+            img {
+                width: 80%;
+            }
+        }
+        .tns-nav {
+            bottom: -24px;
+            button {
+                width: 10px;
+                height: 10px;
+                margin: 3px;
             }
         }
     }
