--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -13,7 +13,7 @@
     text-transform: uppercase;
     transition: 0.5s all;
     &:hover {
-        opacity: 0.9;
+        opacity: 0.8;
     }
     &_main {
         margin-top: 68px;
@@ -26,5 +26,10 @@
         width: 100%;
         height: 58px;
         font-size: 16px;
+    }
+    &_mini {
+        width: 133px;
+        height: 42px;
+        font-size: 14px;
     }
 }
