--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -44,4 +44,70 @@
     &__content {
         margin-top: 57px;
     }
+    &-item {
+        width: 303px;
+        min-height: 442px;
+        border: 2px solid #D0D0D0;
+        padding: 20px;
+        &__img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: 200px;
+        }
+        &__subtitle {
+            margin-top: 15px;
+            color: #0D0D0D;
+            text-align: center;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: normal;
+        }
+        &__descr {
+            margin-top: 15px;
+            color: #0D0D0D;
+            text-align: center;
+            font-size: 14px;
+            font-weight: 300;
+            line-height: normal;
+        }
+        &__link {
+            display: block;
+            margin-top: 10px;
+            color: $red-color;
+            text-align: center;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 14px; 
+            text-decoration-line: underline;
+            transition: 0.5s all;
+            &:hover {
+                opacity: 0.9;
+            }
+        }
+        hr {
+            background-color: #E8E8E8;
+            margin: 17px 0;
+            border-bottom: none;
+        }
+        &__footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__old-price {
+            color: #555;
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 14px; 
+            text-decoration: line-through;
+        }
+        &__new-price {
+            color: #050505;
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 20px; 
+        }
+    }
 }
