--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -73,7 +73,9 @@
         }
         &__link {
             display: block;
-            margin-top: 10px;
+            margin: 0 auto;
+            width: 118px;
+            margin-top: 14px;
             color: $red-color;
             text-align: center;
             font-size: 14px;
