--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,11 +1,5 @@
 .catalog {
     padding-bottom: 79px;
-    &__wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
     &__tabs {
         display: flex;
         flex-direction: row;
@@ -55,6 +49,53 @@
         min-height: 442px;
         border: 2px solid #D0D0D0;
         padding: 20px;
+        overflow: hidden;
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &__list {
+            position: relative;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(0%);
+            padding-right: 20px;
+            transition: 0.5s all;
+            padding-left: 15px;
+            margin-bottom: 0;
+            list-style-type: none;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+            li {
+                position: relative;
+                color: #555;
+                font-size: 14px;
+                font-weight: 300;
+                line-height: 21px; 
+                margin-bottom: 10px;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $red-color;
+                    left: -15px;
+                    top: 8px;
+                }
+            }
+        }
         &__img {
             display: block;
             margin: 0 auto;
