--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -42,7 +42,7 @@
         }
     }
     &__content {
-        margin-top: 28px;
+        margin: 28px 8px 0 8px;
         display: none;
         flex-direction: row;
         justify-content: space-evenly;
