--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -63,6 +63,10 @@
             width: calc(200% + 40px);
         }
         &__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             width: 50%;
             margin-right: 0px;
             transform: translateX(-100%);
