--- a/src/sass/blocks/_feedback.scss
+++ b/src/sass/blocks/_feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-    margin-bottom: 48px;
+    margin: 0 15px 48px 15px;
     &__wrapper {
         display: flex;
         flex-direction: column;
@@ -13,11 +13,6 @@
         align-items: flex-start;
         &__img {
             max-width: 170px;
-            max-height: 170px;
-            img {
-                width: 100%;
-                height: 100%;
-            }
         }
         &__article {
             margin-left: 60px;
@@ -33,6 +28,7 @@
             font-size: 14px;
             font-weight: 500;
             line-height: normal;
+            opacity: 0.8;
         }
         &__descr {
             margin-top: 10px;
@@ -40,6 +36,7 @@
             font-size: 16px;
             font-weight: 300;
             line-height: 24px; 
+            // text-align: justify;
         }
     }
 }
