--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -13,7 +13,7 @@
     text-transform: uppercase;
     transition: 0.5s all;
     &:hover {
-        opacity: 0.9;
+        box-shadow: 0px 5px 20px 0px rgba(199, 1, 1, 0.5);
     }
     &_main {
         margin-top: 68px;
@@ -26,10 +26,17 @@
         width: 100%;
         height: 58px;
         font-size: 16px;
+        &:hover {
+            box-shadow: 0 0 15px 2px $red-color;
+        }
     }
     &_mini {
         width: 133px;
         height: 42px;
         font-size: 14px;
+        transition: 0.3s all;
+        &:hover {
+            box-shadow: 2px 2px 8px $red-color;
+        }
     }
 }
