--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -7,6 +7,7 @@
         height: 270px;
         background-color: $red-color;
         top: 0;
+        // bottom: 0;
         left: 50%;
         transform: translateX(-50%);
         padding: 50px 54px 56px 54px;
@@ -51,11 +52,12 @@
         border: 2px solid #fff;
         border-radius: 100%;
         margin: 0 14px;
+        transition: 0.5s all;
         img {
             height: 25px;
         }
         &:hover {
-            box-shadow: 0 0 20px 3px #fff;
+            box-shadow: 0 0 20px 2px #fff;
             border: 2px solid rgba(255,255,255, 0.9);
         }
     }
