--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -49,16 +49,18 @@
         align-items: center;
         width: 50px;
         height: 50px;
-        border: 2px solid #fff;
+        // border: 2px solid #fff;
+        border: none;
         border-radius: 100%;
         margin: 0 14px;
-        transition: 0.5s all;
+        transition: 0.1s all;
         img {
             height: 25px;
         }
         &:hover {
-            box-shadow: 0 0 20px 2px #fff;
-            border: 2px solid rgba(255,255,255, 0.9);
+            // box-shadow: 0 0 20px 2px #fff;
+            // border: 2px solid rgba(255,255,255, 0.9);
+            border: 2px solid #fff;
         }
     }
 }
