--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -14,6 +14,7 @@
     transition: 0.5s all;
     &:hover {
         box-shadow: 0px 5px 20px 0px rgba(199, 1, 1, 0.5);
+        background-color: #de0202;
     }
     &_main {
         margin-top: 68px;
