--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/catalog';
 @import 'blocks/feedback';
 @import 'blocks/footer';
+@import 'blocks/modal';
 @import 'blocks/buttons';
 @import 'media/media';
 * {
