add modal into media

--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -16,7 +16,7 @@
     background-color: #F2F2F2;
     padding: 35px 40px 40px 40px;
     &__close {
-        position: absolute; /*It can be used because position of modal is*/
+        position: absolute; /*It can be used because position of modal is absolute*/
         top: 0;
         right: -35px;
         font-size: 32px;
