--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,13 @@
         font-weight: 300;
         line-height: 30px; 
     }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        margin-bottom: 14px;
+        color:#FFF;
+    }
 }
