--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -192,6 +192,21 @@
             font-size: 14px;
         }
     }
+    .feed-form {
+        width: 278px;
+        input {
+            height: 50px;
+        }
+        .button_submit {
+            width: 100%;
+            height: 50px;
+            font-size: 16px;
+        }
+        label.error {
+            font-size: 13px;
+            font-weight: 300;
+        }
+    }
     .header {
         &__logo {
             max-width: 250px;
@@ -224,23 +239,15 @@
         }
     }
     .consultation {
-        padding: 80px 0 0 15px;
+        padding: 50px 0 0 15px;
         .title_left {
-            line-height: 35px;
+            line-height: 32px;
             font-size: 20px;
             text-align: left;
         }
         &__descr {
             font-size: 15px;
             opacity: 0.8;
-        }
-        .feed-form {
-            width: 290px;
-            .button_submit {
-                width: 100%;
-                height: 58px;
-                font-size: 16px;
-            }
         }
     }
     .carousel {
@@ -317,7 +324,7 @@
         justify-content: center;
         align-items: center;
         width: 300px;
-        padding: 30px 10px 40px 10px;
+        padding: 25px 10px 30px 10px;
         &__close {
             top: -22px;
             right: 3px;
@@ -327,9 +334,6 @@
         }
         &__descr {
             font-size: 13px;
-        }
-        .feed-form {
-            width: 278px;
-        }
+        } 
     }
 }
