--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -44,6 +44,11 @@
                 text-decoration: underline;
             }
         }
+        &__icon {
+            &_animated {
+                animation: none;
+            }
+        }
     }
     .consultation {
         padding-left: 25px;
