--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -5,6 +5,8 @@
         iframe {
             display: block;
             width: 100%;
+            height: 630px;
+            border: none;
         }
     }
     &__info {
