update image-format to .webp

--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -1,7 +1,7 @@
 .benefits {
     min-height: 472px;
     padding: 71px 0 66px 0;
-    background: url(../img/bg_benefits.jpg) center (center/cover) no-repeat;
+    background: url(../img/bg_benefits.webp) center (center/cover) no-repeat;
     &__wrapper {
         display: flex;
         flex-direction: row;
