--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -2,9 +2,9 @@
     font-family: 'MuseoModerno';
     font-display: swap;
     src: local('Museo Moderno Medium'), local('Museo-Moderno-Medium'),
-        url('../../fonts/MuseoModerno-Medium.woff2') format('woff2'),
-        url('../../fonts/MuseoModerno-Medium.woff') format('woff'),
-        url('../../fonts/MuseoModerno-Medium.ttf') format('truetype');
+        url('../fonts/MuseoModerno-Medium.woff2') format('woff2'),
+        url('../fonts/MuseoModerno-Medium.woff') format('woff'),
+        url('../fonts/MuseoModerno-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     }
@@ -13,8 +13,8 @@
     font-family: 'Museo Sans Cyrl';
     font-display: swap;
     src: local('MuseoSansCyrl-300'),
-        url('../../fonts/MuseoSansCyrl-300.woff') format('woff'),
-        url('../../fonts/MuseoSansCyrl-300.ttf') format('truetype');
+        url('../fonts/MuseoSansCyrl-300.woff') format('woff'),
+        url('../fonts/MuseoSansCyrl-300.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     }
@@ -23,8 +23,8 @@
     font-family: 'Museo Sans Cyrl';
     font-display: swap;
     src: local('MuseoSansCyrl-500'),
-        url('../../fonts/MuseoSansCyrl-500.woff') format('woff'),
-        url('../../fonts/MuseoSansCyrl-500.ttf') format('truetype');
+        url('../fonts/MuseoSansCyrl-500.woff') format('woff'),
+        url('../fonts/MuseoSansCyrl-500.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     }
@@ -33,8 +33,8 @@
     font-family: 'Museo Sans Cyrl';
     font-display: swap;
     src: local('MuseoSansCyrl-700'),
-        url('../../fonts/MuseoSansCyrl-700.woff') format('woff'),
-        url('../../fonts/MuseoSansCyrl-700.ttf') format('truetype');
+        url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
+        url('../fonts/MuseoSansCyrl-700.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     }
