--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,7 +1,7 @@
 .consultation {
     min-height: 680px;
     padding: 100px 0 108px 0;
-    background: url('../img/bg_third_sneaker.webp') center (center/cover) no-repeat;
+    background: url('../img/bg_third_sneaker.jpg') center (center/cover) no-repeat;
     &__descr {
         color: #FFF;
         font-size: 20px;
